<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activities.CategoryActivity"
    android:background="@color/kill_ddl_blue">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_create_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_action_add" />

</android.support.design.widget.CoordinatorLayout>
